# offsets-and-remeshing

./: CMakeLists.txt  README.md
data/: cube.off
src/: CMakeLists.txt
src/mesh_cleanup/: CMakeLists.txt  main.cpp
src/selfinter_repair/: CMakeLists.txt  main.cpp
src/voxeloffset/: CMakeLists.txt  Distance.h  Dual_contouring_octree_3.h  Dual_contouring_offset.cpp  Dual_contouring_offset.h  Octree_split_predicates.h  Octree_wrapper.h  Quality_measurements.h  Remeshing.cpp  Remeshing.h  collapse_hybrid_edge.h  types.h  utilities.h
src/voxeloffset_cli/: CMakeLists.txt  main.cpp
src/voxeloffset_main/: CMakeLists.txt  main.cpp
